# pann-panc-concept

./: .dockerignore  .gitignore  BREAKTHROUGH_ASSESSMENT.md  Cargo.toml  README.md  ROADMAP.md
configs/: fruits-small-pann.example.json
cropper/cropper-yolo/: README.md  pyproject.toml
cropper/cropper-yolo/src/cropper_yolo/: __init__.py  __main__.py
data/: embedding_tiny_eval.csv
docker-pann-panc/: .env.example  Dockerfile  README.md  docker-compose.yml
pann-panc/: BREAKTHROUGH_ASSESSMENT.md  Cargo.toml  README.md  ROADMAP.md  progress-books.txt
pann-panc/configs/: image-manifest-supervised.example.json  mvtec-metal-nut-patch-evolve.example.json  mvtec-metal-nut-patch-scan.example.json
pann-panc/data/: embedding_tiny_train.csv
pann-panc/src/: baseline.rs  vision.rs
pann-panc/src/evolution/: genetic.rs
pann-panc/src/panc/: binary.rs  error.rs  mod.rs
pann-panc/src/pann/: mod.rs  training.rs
pann-panc/technology-implementation/: README.md  missing-parts-analysis.md  pann-core-implementation.md  reproduction-plan.md
pann-panc/tests/: research_integration.rs
src/: lib.rs  main.rs  panc.rs  pann.rs  preprocess.rs  vision.rs
src/evolution/: mod.rs  panc.rs
src/panc/: dense.rs  metrics.rs  tests.rs
src/pann/: activation.rs  config.rs  intervals.rs  matrix.rs  mod.rs  model.rs  tests.rs
src/vision/: features.rs
technology-implementation/: README.md  panc-public-implementation-notes.md  patents-and-sources.md
tests/: research_integration.rs
