[package]
name = "progress-ai-rust-prototype"
version = "0.1.0"
edition = "2024"
description = "Rust prototype based on public Progress/PANN/PANC implementation notes"
license = "UNLICENSED"
publish = false

[dependencies]
csv = "1.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ndarray = "0.16"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lib]
name = "progress_ai"
path = "src/lib.rs"

[[bin]]
name = "progress-ai-demo"
path = "src/main.rs"

[[bin]]
name = "research-bench"
path = "src/bin/research-bench.rs"
